# CatImage

./: .gitignore  CHANGELOG.md  DOCS.md  README.md  catimage.py  pyproject.toml  requirements.txt  requirements_optional.txt  setup.py
.github/workflows/: mirror-to-codeberg.yaml
DOCS/: catimage.md  readme.md
DOCS/catimage/: catimage.md  index.md  module.md
assets/: error_icon.pdn  success_icon.pdn
catimage/: __init__.py  __main__.py  catimage.py
documentation/reference/: MODULES.md  README.md
documentation/reference/catimage/: catimage.md  index.md  module.md
test/: greyscale.py  hdcolour.py
tests/: greyscale.py  hdcolour.py  test_main.py
tests/data/: test_broken.txt  test_colour.txt  test_greyscale.txt
