[tool.poetry]
name = "catimage"
version = "2023"
license = "mit"
description = "Use to cat an image to the terminal"
authors = ["FredHappyface"]
classifiers = [
	"Environment :: Console",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Multimedia :: Graphics",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities"
]
homepage = "https://github.com/FredHappyface/Python.CatImage"
repository = "https://github.com/FredHappyface/Python.CatImage"
documentation = "https://github.com/FredHappyface/Python.CatImage/blob/master/README.md"
readme = "README.md"

[tool.poetry.scripts]
catimage = 'catimage.catimage:cli'

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
Pillow = "<11,>=10.0.0"
cli2gui = {version = "<2025,>=2023", optional = true}

[tool.poetry.extras]
full = ["cli2gui"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pylint = "^2.17.5"
handsdown = "^2.0.1"
coverage = "^7.3.0"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
indent = "Tab"

[tool.pydocstyle]
convention = "google"
ignore = "D205,D415"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.basic]
argument-naming-style = "camelCase"
attr-naming-style = "camelCase"
function-naming-style = "camelCase"
method-naming-style = "camelCase"
variable-naming-style = "camelCase"

[tool.pylint.format]
indent-string = "\t"

[tool.pylint.master]
ignore-paths = ["tests"]

[tool.pylint.messages_control]
enable = ["F", "E", "W", "R", "C"]
disable = ["pointless-string-statement", "superfluous-parens"]

[tool.tox]
legacy_tox_ini = """
[tox]
env_list =
	py311
	py310
	py39
	py38

[testenv]
deps = pytest
commands = pytest tests
"""
